# niumside-poptracker

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .ignore  Cargo.toml  Dockerfile  README.md  build.Dockerfile  build.sh  check-niumside-health.sh  db_backup_initial_migration_only.sql  dev.Dockerfile  docker-compose.yaml  example.sqlx.env  flake.nix  niumisde-database.sql  niumside-database.pgerd  niumside-database.sql  production.Dockerfile  sqlx-data.json
.github/workflows/: base-build-image.yaml  build-watchdog.yaml  builds.yaml  docker.yaml  lint.yaml  release.yml  tests.yaml
.sqlx/: query-06a1d7ca31313595e762e7a3c1788abe5ba915cba48db6c9be815aae6221311f.json  query-100c35003002c5c29e570b4dc06152775891aeb03cccf9d7245e90eb8881e269.json  query-11e4120af59d389603a3d1d60d7ea89034da48e2a770e299cf970796cd3b544c.json  query-19a2b569cd1990f44f74a1249983663d9b8d34b441d7924a777d19842d7ece27.json  query-1b381cca749b4d0343e9a5c86379aa23e77b7ff1d0cb7b3770dbac8b222afc96.json  query-2a9fa36b6a31a1f39bc5acc32b430d82f9138634800f273f3c93605bf72ed4ca.json  query-2f95ed910c7b26eceedc6d882cef5ce0fcc2307306613d09dd8ca25bc684a442.json  query-2ffcf922b84d75277e96e79029b22dc59db47c7901c7072f6fbfe8237b82e34d.json  query-38633c10d4dfcedc62e1c64bd13df62837baba87b2fbe89f1bf7cba9df10300d.json  query-472ca79650de0d4b44726c042be6ff9f8bb5e91fd50ac102607372bfd2441c07.json  query-4ca1802f7d6fc717126e58792307e668d5b6f33661ef80dc6e52377d93236e0f.json  query-4cb271f200ea59bad193edd34f43735997253285d5cdbfcf6ecdd82598f67148.json  query-4d493fbe8929b475313fd3ec6c6dfe401c46edee257f36f5176880e975a0853d.json  query-539be6aaf0c039fcbbe87939526bf442723d88c7eb6d7844a517f4eb8ffa0e2c.json  query-5ebd6ea108c1d1ac357a9f47f4d1475decf30cdf14bc199797d6fcbe8db39fe8.json  query-62983c6bac0bcd863e177257fb7ecaea22e5f5afd620dd6263eb20300ed6d4f9.json  query-7d4f30a4b09dde9da62d2101d8724c10ddfa91493610da40d2a51cc9422c3640.json  query-81392db4020fbfd0e33a17e96063cf581a359420574b2205cb43ec7ce073bd89.json  query-855483f5ee431d0688c041077ae26a68cbec4d8f39136eb0bca313f11ac9048c.json  query-8b5dedef3329eddfbf7a29892035cbe3cec3d3666ba739d748d496fe41856c7d.json  query-8e05c28001e733f850bcce963c7f39e89dc4631aa6e6fc7f68c650c3e7da9d58.json  query-9f90200add2220d6e8cc48448d7fb17b6dc642815626a291543812a8600e4ba6.json  query-9f929ce6e805538e4655ccd8b8a7d13e6493192598fa84182a5ed971b42560c8.json  query-a95ea562f4371727bc4ae881fb31e45ea16a01bdd6009078dea35934724bc957.json  query-aad83c471a80fe8a36df9d18e6cbd72b4e35c00e6e56706770f145e0b008c13d.json  query-ae36319f6bde0b2759815299e1e1a3d909119a7e1e6f7c2e89d761dfd49c4227.json  query-af03a08be00c0c46fd7fb8b3bf4ac44b92de06598a3650bc1e17ce90074e09f7.json  query-b80dec830449ec932000890dfed1d9d438e11303cc1aa529fde36eedf4ac53bd.json  query-b9338e200efcbe08e7908201fbe45ead2e03f1679e7027060235620f37f3e3e2.json  query-bca100a0bf1a46f57045ca3f2a6834eb7680557e624dc84f5337ac8eaa5af333.json  query-bd3c61cfe983a439caa776ef3cba814599cc5384d3274c4039fdc0e19bfc60d1.json  query-c52e3d393f30758b481cf1d6e7344b4abc8a028c9153b172b61572c9bd30e066.json  query-cd08265475eac0e099bcb744acc9ae6fb39fc8491ef4c2f990d114de8e9fba28.json  query-d011929725f970c506724a96c88bfbb93a85296434ee3923d24f96e50559b5fe.json  query-d5a2352baf32c1479c27d0fa76da385e6a8fe3de707e9ae385e2381051cb92a5.json  query-d66cf855be2055a3aa7fe1eb79158eed5a74f2712e0c07ef0afc9e04dac5dc6c.json  query-d6bf540657d4ae0e9fce894a281bed71e7fef60e98491506929dbfffc4483219.json  query-d95b2cefb66cf87a7bcd0acec42f823fb61cb6e4f0e08ab3aa879c325e0e6e61.json  query-da4ac889bec9b47e38790d04869371f98bb49934abe52aec1efe3baa788b7ca0.json  query-e5050548e45f095dc9822bac1c285889e4d4bb52d16ff36c54f74a4991974cba.json  (+7 more)
config/: default.yaml  production.yaml
docker/: .env  docker-compose.yaml  prometheus.yml
docker/base-build-image/: Dockerfile
docker/pgadmin/: servers.json
docker/production/: .env  config.yaml  docker-compose.production.yaml  docker-compose.yaml
docker/watchdog/: .dockerignore  Dockerfile  watchdog.sh
migrations/: 20230531171547_Initial.sql  20240124135107_zone_id_breakdown.sql  20240630153907_initial_discord_events.sql  20241016172214_Add_Indexes.sql  20241016180914_add_indexes_to_level_ids.sql  20241126163129_MembershipReminder.sql  20241207174851_membership_reminder_custom_interval.sql
src/: active_players.rs  configuration.rs  constants.rs  lib.rs  logging.rs  main.rs  metrics.rs  realtime.rs  shuttle.rs  startup.rs
src/api/: mod.rs
src/census/: constants.rs  event.rs  mod.rs  realtime.rs  subscription.rs  update_data.rs  utils.rs
src/census/realtime/: client.rs
src/census/rest/: character.rs  client.rs  mod.rs  update_data.rs
src/census/structs/: character.rs
src/controllers/: character.rs  faction.rs  mod.rs  population.rs  user.rs  world.rs  zone.rs
src/discord/: census_formatting.rs  commands.rs  formatters.rs  formatting.rs  icons.rs  mod.rs
src/discord/commands/: census.rs  generic.rs  membership_reminder.rs
src/discord/formatters/: census.rs  generic.rs
src/discord/updaters/: membership_reminder.rs  mod.rs  update_calendar.rs
src/discord/updaters/utils/: mod.rs
src/event_handlers/: gain_experience.rs  mod.rs
src/google_calendar/: formatting.rs  mod.rs
src/serde/: mod.rs  naivedatetime.rs
src/storage/: configuration.rs  db_pool.rs  mod.rs  pool.rs
src/utils/: mod.rs
src/web/: api.rs  census_api.rs  mod.rs
static/swagger-v4.19.0/: index.html
