[package]
name = "niumside-poptracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
config = "0.14.0"
url = { version = "2.5.1", features = ["serde"], optional = true }
serde = { version = "1.0.203", features = ["derive"] }
chrono = "0.4.31"
futures = {  version = "0.3.30", optional = true }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"], optional = true }
thiserror = "1.0.61"
metrics-exporter-prometheus =  { version = "0.15.0", default-features = false, features = ["http-listener"], optional = true }
metrics = { version = "0.23.0", optional = true }
rocket = { version = "0.5.1", features = ["json"], optional = true }
utoipa = { version = "4.2.0", features = ["rocket_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "7.1.0", features = ["rocket"], optional = true }
serde_json = { version = "1.0.117", optional = true }
poise = {  version = "0.6.1", optional = true }
strum = { version = "0.26.2", features = ["derive"], optional = true }
anyhow = "1.0.86"
tungstenite = { version = "0.23.0", features = ["native-tls-vendored"], optional = true }
num_enum = {  version = "0.7.2", optional = true }
serde_with = { version = "3.8.1", features = ["chrono"], optional = true }
reqwest = { version = "0.12.4", features = ["json"], optional = true }
google-calendar3 = { version = "5.0.5", optional = true }
hyper = "1.3.1"
hyper-rustls = "0.27.2"
regex = "1.10.5"
steganography = "1.0.2"

[features]
default = ["discord", "monitoring"]
discord = ["dep:poise", "dep:serde_json", "dep:google-calendar3", "database"]
database = ["dep:sqlx"]
monitoring = ["api", "dep:metrics-exporter-prometheus", "dep:metrics"]
api = ["dep:utoipa", "dep:utoipa-swagger-ui", "dep:rocket", "dep:serde_json"]
census = ["dep:serde_json", "dep:reqwest", "database", "dep:serde_with", "dep:num_enum", "dep:tungstenite", "dep:strum", "dep:url"]
